refactor: simplify CSL fields handling and update localization strings for clarity

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -16,7 +16,7 @@
   "ai-disclaimer-detailed": "Source Taster nutzt KI. Ergebnisse können Fehler enthalten – bitte vor wissenschaftlicher Nutzung überprüfen.",
   "ai-extraction": "KI-Extraktion",
   "ai-model": "KI-Modell",
-  "ai-model-description": "Wählen Sie das KI-Modell für die Extraktion verwendet werden soll.",
+  "ai-model-description": "Wählen Sie das KI-Modell, das für die Extraktion verwendet werden soll.",
   "ai-models": {
     "claude-3-5-haiku-20241022": "Claude 3.5 Haiku (Schnell & Kosteneffizient)",
     "claude-opus-4-20250514": "Claude Opus 4 (Höchste Intelligenz)",
@@ -389,7 +389,6 @@
   "field-yearSuffix": "Jahr-Suffix",
   "fields": "Felder",
   "first-reference-note-number": "Erste Referenznotennummer",
-  "more-fields": "weitere Felder",
   "flag-problematic": "Als problematisch markieren",
   "flag-problematic-tooltip": "Diese Referenz als möglicherweise problematisch kennzeichnen",
   "format-variations": "Formatvariationen",
@@ -409,6 +408,7 @@
   "help": "Hilfe",
   "help-description": "Erhalte Unterstützung und hilfreiche Ressourcen",
   "hide-additional-fields": "Zusätzliche Felder ausblenden",
+  "hide-all-fields": "Alle Felder ausblenden",
   "hide-date-details": "Datumsdetails ausblenden",
   "hide-details": "Details ausblenden",
   "high-impact": "Großer Einfluss auf Bewertung",
@@ -559,6 +559,7 @@
   "month": "Monat",
   "more-advanced-fields": "Weitere spezialisierte Felder",
   "more-advanced-fields-description": "Zusätzliche Felder für hochspezialisierte Anwendungsfälle (wissenschaftliche Arbeiten, übersetzte Werke, etc.)",
+  "more-fields": "weitere Felder",
   "narrator": "Erzähler",
   "no": "Nein",
   "no-additional-error-info": "Keine zusätzlichen Fehlerinformationen verfügbar",
@@ -741,6 +742,10 @@
   "setting-normalize-abbreviations-description": "Häufige Abkürzungen erweitern",
   "setting-normalize-abbreviations-example": "\"J.\" → \"Journal\", \"Vol.\" → \"Volume\"",
   "setting-normalize-abbreviations-short-description": "Abkürzungen erweitern",
+  "setting-normalize-accents": "Akzente normalisieren",
+  "setting-normalize-accents-description": "Diakritische Zeichen und Akzente für besseres Matching entfernen (z.B. naïve → naive)",
+  "setting-normalize-accents-example": "\"naïve café résumé\" → \"naive cafe resume\"",
+  "setting-normalize-accents-short-description": "Diakritische Zeichen entfernen",
   "setting-normalize-author-names": "Autorennamen normalisieren",
   "setting-normalize-author-names-description": "Autorennamen in einen einheitlichen Stil formatieren",
   "setting-normalize-author-names-example": "\"John Smith\" → \"Smith, John\"",
@@ -761,26 +766,18 @@
   "setting-normalize-lowercase-description": "Alle Texte in Kleinschreibung umwandeln für konsistente Übereinstimmung (entfernt Groß-/Kleinschreibung)",
   "setting-normalize-lowercase-example": "\"Der Schnelle Braune Fuchs\" → \"der schnelle braune fuchs\"",
   "setting-normalize-lowercase-short-description": "In Kleinschreibung umwandeln",
-  "setting-normalize-typography": "Typografie normalisieren",
-  "setting-normalize-typography-description": "Häufige Kodierungsprobleme wie Anführungszeichen, Gedankenstriche und andere nicht-standardisierte Zeichen korrigieren",
-  "setting-normalize-typography-example": "\"Anführungszeichen\" → \"Anführungszeichen\", \"—Gedankenstrich\" → \"-\"",
-  "setting-normalize-typography-short-description": "Kodierung und Sonderzeichen korrigieren",
-  "setting-normalize-whitespace": "Leerzeichen normalisieren",
-  "setting-normalize-whitespace-description": "Leerzeichen normalisieren durch Entfernen doppelter Leerzeichen, führender/nachfolgender Leerzeichen, unnötiger Tabs und weicher Zeilenumbrüche",
-  "setting-normalize-whitespace-example": "\"Das    ist ein  Test.\" → \"Das ist ein Test.\"",
-  "setting-normalize-whitespace-short-description": "Abstände bereinigen",
-  "setting-normalize-accents": "Akzente normalisieren",
-  "setting-normalize-accents-description": "Diakritische Zeichen und Akzente für besseres Matching entfernen (z.B. naïve → naive)",
-  "setting-normalize-accents-example": "\"naïve café résumé\" → \"naive cafe resume\"",
-  "setting-normalize-accents-short-description": "Diakritische Zeichen entfernen",
-  "setting-normalize-umlauts": "Umlaute normalisieren",
-  "setting-normalize-umlauts-description": "Deutsche und europäische Sonderzeichen in ASCII-Äquivalente umwandeln",
-  "setting-normalize-umlauts-example": "\"Müller Schrödinger über\" → \"Mueller Schroedinger ueber\"",
-  "setting-normalize-umlauts-short-description": "Umlaute in ASCII umwandeln",
   "setting-normalize-punctuation": "Satzzeichen normalisieren",
   "setting-normalize-punctuation-description": "Satzzeichen für besseres Textmatching normalisieren durch Entfernen der meisten Symbole außer Buchstaben, Zahlen und grundlegender Interpunktion",
   "setting-normalize-punctuation-example": "\"COVID-19: Studie, Ergebnisse & Analyse!\" → \"COVID-19 Studie Ergebnisse Analyse\"",
   "setting-normalize-punctuation-short-description": "Satzzeichen bereinigen",
+  "setting-normalize-typography": "Typografie normalisieren",
+  "setting-normalize-typography-description": "Häufige Kodierungsprobleme wie Anführungszeichen, Gedankenstriche und andere nicht-standardisierte Zeichen korrigieren",
+  "setting-normalize-typography-example": "\"Anführungszeichen\" → \"Anführungszeichen\", \"—Gedankenstrich\" → \"-\"",
+  "setting-normalize-typography-short-description": "Kodierung und Sonderzeichen korrigieren",
+  "setting-normalize-umlauts": "Umlaute normalisieren",
+  "setting-normalize-umlauts-description": "Deutsche und europäische Sonderzeichen in ASCII-Äquivalente umwandeln",
+  "setting-normalize-umlauts-example": "\"Müller Schrödinger über\" → \"Mueller Schroedinger ueber\"",
+  "setting-normalize-umlauts-short-description": "Umlaute in ASCII umwandeln",
   "setting-normalize-unicode": "Unicode normalisieren",
   "setting-normalize-unicode-description": "Unicode-Normalisierung für konsistente Zeichendarstellung anwenden und unsichtbare Formatierungszeichen entfernen",
   "setting-normalize-unicode-example": "Verschiedene Unicode-Darstellungen → einheitliche Form",
@@ -789,6 +786,10 @@
   "setting-normalize-urls-description": "URLs für konsistenten Vergleich normalisieren durch Entfernen von Fragmenten, Standardisierung von Parametern und Bereinigung von Tracking-Daten",
   "setting-normalize-urls-example": "\"https://example.com/page?utm_campaign=123#section\" → \"https://example.com/page\"",
   "setting-normalize-urls-short-description": "URL-Format standardisieren",
+  "setting-normalize-whitespace": "Leerzeichen normalisieren",
+  "setting-normalize-whitespace-description": "Leerzeichen normalisieren durch Entfernen doppelter Leerzeichen, führender/nachfolgender Leerzeichen, unnötiger Tabs und weicher Zeilenumbrüche",
+  "setting-normalize-whitespace-example": "\"Das    ist ein  Test.\" → \"Das ist ein Test.\"",
+  "setting-normalize-whitespace-short-description": "Abstände bereinigen",
   "setting-recognize-source-types": "Quellentypen erkennen",
   "setting-recognize-source-types-description": "Publikationstypen automatisch erkennen",
   "setting-recognize-source-types-example": "\"journal-article\" vs \"book\" erkennen",
@@ -817,6 +818,7 @@
   "setting-typo-correction-description": "Offensichtliche Rechtschreibfehler korrigieren",
   "setting-typo-correction-example": "\"Jouranl\" → \"Journal\"",
   "show-additional-fields": "Zusätzliche Felder anzeigen",
+  "show-all-fields": "Alle Felder anzeigen",
   "show-date-details": "Datumsdetails anzeigen",
   "show-details": "Details anzeigen",
   "side-panel": "Seitenleiste",
