--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -389,7 +389,6 @@
   "field-yearSuffix": "Year Suffix",
   "fields": "Fields",
   "first-reference-note-number": "First Reference Note Number",
-  "more-fields": "more fields",
   "flag-problematic": "Flag as problematic",
   "flag-problematic-tooltip": "Mark this reference as potentially problematic",
   "format-variations": "Format Variations",
@@ -409,6 +408,7 @@
   "help": "Help",
   "help-description": "Get support and helpful resources",
   "hide-additional-fields": "Hide additional fields",
+  "hide-all-fields": "Hide all fields",
   "hide-date-details": "Hide date details",
   "hide-details": "Hide details",
   "high-impact": "Major influence on match score",
@@ -559,6 +559,7 @@
   "month": "Month",
   "more-advanced-fields": "More Specialized Fields",
   "more-advanced-fields-description": "Additional fields for highly specialized use cases (academic theses, translated works, etc.)",
+  "more-fields": "more fields",
   "narrator": "Narrator",
   "no": "No",
   "no-additional-error-info": "No additional error information available",
@@ -741,6 +742,10 @@
   "setting-normalize-abbreviations-description": "Expand common abbreviations",
   "setting-normalize-abbreviations-example": "\"J.\" → \"Journal\", \"Vol.\" → \"Volume\"",
   "setting-normalize-abbreviations-short-description": "Expand abbreviations",
+  "setting-normalize-accents": "Normalize Accents",
+  "setting-normalize-accents-description": "Remove diacritical marks and accents for better matching (e.g., naïve → naive)",
+  "setting-normalize-accents-example": "\"naïve café résumé\" → \"naive cafe resume\"",
+  "setting-normalize-accents-short-description": "Remove diacritical marks",
   "setting-normalize-author-names": "Normalize Author Names",
   "setting-normalize-author-names-description": "Format author names to a consistent style",
   "setting-normalize-author-names-example": "\"John Smith\" → \"Smith, John\"",
@@ -761,26 +766,18 @@
   "setting-normalize-lowercase-description": "Convert all text to lowercase for consistent matching (removes case sensitivity)",
   "setting-normalize-lowercase-example": "\"The Quick Brown Fox\" → \"the quick brown fox\"",
   "setting-normalize-lowercase-short-description": "Convert to lowercase",
-  "setting-normalize-typography": "Normalize Typography",
-  "setting-normalize-typography-description": "Fix common encoding issues such as smart quotes, em dashes, and other non-standard characters",
-  "setting-normalize-typography-example": "\"Smart quotes\" → \"Smart quotes\", \"—em dash\" → \"-\"",
-  "setting-normalize-typography-short-description": "Fix encoding and special characters",
-  "setting-normalize-whitespace": "Normalize Whitespace",
-  "setting-normalize-whitespace-description": "Normalize whitespace by removing duplicated spaces, leading/trailing spaces, unnecessary tabs, and soft line breaks",
-  "setting-normalize-whitespace-example": "\"This    is a  test.\" → \"This is a test.\"",
-  "setting-normalize-whitespace-short-description": "Clean up spacing",
-  "setting-normalize-accents": "Normalize Accents",
-  "setting-normalize-accents-description": "Remove diacritical marks and accents for better matching (e.g., naïve → naive)",
-  "setting-normalize-accents-example": "\"naïve café résumé\" → \"naive cafe resume\"",
-  "setting-normalize-accents-short-description": "Remove diacritical marks",
-  "setting-normalize-umlauts": "Normalize Umlauts",
-  "setting-normalize-umlauts-description": "Convert German and European special characters to ASCII equivalents",
-  "setting-normalize-umlauts-example": "\"Müller Schrödinger über\" → \"Mueller Schroedinger ueber\"",
-  "setting-normalize-umlauts-short-description": "Convert umlauts to ASCII",
   "setting-normalize-punctuation": "Normalize Punctuation",
   "setting-normalize-punctuation-description": "Normalize punctuation for better text matching by removing most symbols except letters, numbers, and basic punctuation",
   "setting-normalize-punctuation-example": "\"COVID-19: Study, Results & Analysis!\" → \"COVID-19 Study Results Analysis\"",
   "setting-normalize-punctuation-short-description": "Clean up punctuation",
+  "setting-normalize-typography": "Normalize Typography",
+  "setting-normalize-typography-description": "Fix common encoding issues such as smart quotes, em dashes, and other non-standard characters",
+  "setting-normalize-typography-example": "\"Smart quotes\" → \"Smart quotes\", \"—em dash\" → \"-\"",
+  "setting-normalize-typography-short-description": "Fix encoding and special characters",
+  "setting-normalize-umlauts": "Normalize Umlauts",
+  "setting-normalize-umlauts-description": "Convert German and European special characters to ASCII equivalents",
+  "setting-normalize-umlauts-example": "\"Müller Schrödinger über\" → \"Mueller Schroedinger ueber\"",
+  "setting-normalize-umlauts-short-description": "Convert umlauts to ASCII",
   "setting-normalize-unicode": "Normalize Unicode",
   "setting-normalize-unicode-description": "Apply Unicode normalization for consistent character representation and remove invisible formatting characters",
   "setting-normalize-unicode-example": "Different Unicode representations → consistent form",
@@ -789,6 +786,10 @@
   "setting-normalize-urls-description": "Normalize URLs for consistent comparison by removing fragments, standardizing parameters, and cleaning tracking data",
   "setting-normalize-urls-example": "\"https://example.com/page?utm_campaign=123#section\" → \"https://example.com/page\"",
   "setting-normalize-urls-short-description": "Standardize URL format",
+  "setting-normalize-whitespace": "Normalize Whitespace",
+  "setting-normalize-whitespace-description": "Normalize whitespace by removing duplicated spaces, leading/trailing spaces, unnecessary tabs, and soft line breaks",
+  "setting-normalize-whitespace-example": "\"This    is a  test.\" → \"This is a test.\"",
+  "setting-normalize-whitespace-short-description": "Clean up spacing",
   "setting-recognize-source-types": "Recognize Source Types",
   "setting-recognize-source-types-description": "Automatically detect publication types",
   "setting-recognize-source-types-example": "Detect \"journal-article\" vs \"book\"",
@@ -817,6 +818,7 @@
   "setting-typo-correction-description": "Fix obvious spelling errors",
   "setting-typo-correction-example": "\"Jouranl\" → \"Journal\"",
   "show-additional-fields": "Show additional fields",
+  "show-all-fields": "Show all fields",
   "show-date-details": "Show date details",
   "show-details": "Show Details",
   "side-panel": "Side Panel",
