feat: add Token Relabeling Editor and integrate with Training Data Manager

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -854,8 +854,36 @@
   "title": "Titel",
   "title-match": "Titel-Übereinstimmung",
   "title-short": "Titel (Kurz)",
+  "token-relabeling": {
+    "title": "Token-Neulabelung Editor",
+    "save": "Änderungen speichern",
+    "noTokens": "Keine Token zum Neulabeln verfügbar",
+    "currentLabel": "Aktueller Label",
+    "token": "Token",
+    "changeLabelFor": "Label ändern für",
+    "deleteToken": "Token löschen",
+    "totalTokens": "Gesamt-Token",
+    "changesCount": "Vorgenommene Änderungen",
+    "reset": "Änderungen zurücksetzen"
+  },
   "tokens-per-minute": "Token pro Minute",
   "tokens-per-minute-description": "Dies ist das Limit der KI-Token pro Minute",
+  "training-data": {
+    "title": "AnyStyle Modell-Training",
+    "modelTraining": "Modell-Training",
+    "description": "Parsen Sie Referenzen mit AnyStyle und korrigieren Sie Token-Labels, um Trainingsdaten für verbesserte Parsing-Genauigkeit zu erstellen.",
+    "inputLabel": "Referenz-Text",
+    "inputPlaceholder": "Fügen Sie hier eine Referenz ein, z.B.: Smith, J. (2023). Machine Learning Fundamentals. IEEE Software, 30(6): 17-23.",
+    "parseButton": "Referenz parsen",
+    "exportButton": "XML-Trainingsdaten exportieren",
+    "historyButton": "Trainings-Verlauf",
+    "parsedReference": "Geparste Referenz (CSL-Format)",
+    "historyTitle": "Trainingsdaten-Verlauf",
+    "sequences": "Sequenzen",
+    "originalText": "Original-Text",
+    "noHistory": "Noch keine Trainingsdaten gespeichert",
+    "clearHistory": "Gesamten Verlauf löschen"
+  },
   "tooltip-abstract": "Kurze Zusammenfassung des Inhalts der Publikation (z.B. 'This study examines...')",
   "tooltip-accepted": "Datum, an dem das Manuskript zur Veröffentlichung angenommen wurde (z.B. '2024-03-15')",
   "tooltip-advisor": "Akademischer Betreuer oder Supervisor (z.B. 'Prof. Dr. Schmidt')",
