--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -854,8 +854,36 @@
   "title": "Title",
   "title-match": "Title Match",
   "title-short": "Title (Short)",
+  "token-relabeling": {
+    "title": "Token Relabeling Editor",
+    "save": "Save Changes",
+    "noTokens": "No tokens available for relabeling",
+    "currentLabel": "Current Label",
+    "token": "Token",
+    "changeLabelFor": "Change label for",
+    "deleteToken": "Delete Token",
+    "totalTokens": "Total Tokens",
+    "changesCount": "Changes Made",
+    "reset": "Reset Changes"
+  },
   "tokens-per-minute": "Tokens per minute",
   "tokens-per-minute-description": "This is the limit of AI tokens per minute",
+  "training-data": {
+    "title": "AnyStyle Model Training",
+    "modelTraining": "Model Training",
+    "description": "Parse references with AnyStyle and correct token labels to create training data for improved parsing accuracy.",
+    "inputLabel": "Reference Text",
+    "inputPlaceholder": "Paste a reference here, e.g.: Smith, J. (2023). Machine Learning Fundamentals. IEEE Software, 30(6): 17-23.",
+    "parseButton": "Parse Reference",
+    "exportButton": "Export XML Training Data",
+    "historyButton": "Training History",
+    "parsedReference": "Parsed Reference (CSL Format)",
+    "historyTitle": "Training Data History",
+    "sequences": "sequences",
+    "originalText": "Original Text",
+    "noHistory": "No training data saved yet",
+    "clearHistory": "Clear All History"
+  },
   "tooltip-abstract": "Brief summary of the publication's content (e.g. 'This study examines...')",
   "tooltip-accepted": "Date when the manuscript was accepted for publication (e.g. '2024-03-15')",
   "tooltip-advisor": "Academic advisor or supervisor (e.g. 'Prof. Dr. Schmidt')",
