feat: integrate Token Relabeling Editor into Training Data Manager and update localization strings

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -878,6 +878,7 @@
     "exportButton": "XML-Trainingsdaten exportieren",
     "historyButton": "Trainings-Verlauf",
     "parsedReference": "Geparste Referenz (CSL-Format)",
+    "editorTitle": "Token-Label Editor (Optional)",
     "historyTitle": "Trainingsdaten-Verlauf",
     "sequences": "Sequenzen",
     "originalText": "Original-Text",
