feat: update UI titles and subtitles for InputCard, TrainingDataManager, and ReportSection components; add missing translations

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -189,6 +189,7 @@
   "early-termination-threshold-high": "Sehr streng (99%)",
   "early-termination-threshold-low": "Weniger streng (50%)",
   "early-termination-title": "Frühzeitige Beendigung",
+  "edit": "",
   "edition": "Auflage",
   "editor": "Herausgeber",
   "editorial-director": "Verlagsleiter",
@@ -437,6 +438,7 @@
   "import-pdf-or-add-references": "Importiere eine PDF-Datei oder füge Referenzen direkt in das Textfeld ein, um die Überprüfung zu starten.",
   "in-press": "Im Druck",
   "in-press-indicator": "im Druck",
+  "input-references-as-text-or-upload-a-file": "Referenzen als Text eingeben oder eine Datei hochladen",
   "input-required": "Eingabe erforderlich",
   "insert-references": "Text mit Referenzen eingeben...",
   "institution": "Institution",
@@ -643,6 +645,7 @@
   "pages": "Seiten",
   "pages-match": "Seiten-Übereinstimmung",
   "paragraph-number": "Absatznummer",
+  "parse": "",
   "part": "Teil",
   "part-title": "Teiltitel",
   "partial-verification": "{verified}/{total} verifiziert ({percentage} %)",
@@ -688,6 +691,7 @@
   "restart-verification": "Überprüfung neu starten",
   "retrieval-date": "Abrufdatum",
   "retry": "Wiederholen",
+  "review-and-relabel-parsed-references-by-clicking-on-tokens": "",
   "reviewed-author": "Rezensierter Autor",
   "reviewed-genre": "Rezensiertes Genre",
   "reviewed-title": "Rezensierter Titel",
@@ -855,36 +859,19 @@
   "title-match": "Titel-Übereinstimmung",
   "title-short": "Titel (Kurz)",
   "token-relabeling": {
-    "title": "Token-Neulabelung Editor",
-    "save": "Änderungen speichern",
-    "noTokens": "Keine Token zum Neulabeln verfügbar",
-    "currentLabel": "Aktueller Label",
-    "token": "Token",
     "changeLabelFor": "Label ändern für",
-    "deleteToken": "Token löschen",
-    "totalTokens": "Gesamt-Token",
     "changesCount": "Vorgenommene Änderungen",
-    "reset": "Änderungen zurücksetzen"
+    "currentLabel": "Aktueller Label",
+    "deleteToken": "Token löschen",
+    "noTokens": "Keine Token zum Neulabeln verfügbar",
+    "reset": "Änderungen zurücksetzen",
+    "save": "Änderungen speichern",
+    "title": "Token-Neulabelung Editor",
+    "token": "Token",
+    "totalTokens": "Gesamt-Token"
   },
   "tokens-per-minute": "Token pro Minute",
   "tokens-per-minute-description": "Dies ist das Limit der KI-Token pro Minute",
-  "training-data": {
-    "title": "AnyStyle Modell-Training",
-    "modelTraining": "Modell-Training",
-    "description": "Parsen Sie Referenzen mit AnyStyle und korrigieren Sie Token-Labels, um Trainingsdaten für verbesserte Parsing-Genauigkeit zu erstellen.",
-    "inputLabel": "Referenz-Text",
-    "inputPlaceholder": "Fügen Sie hier eine Referenz ein, z.B.: Smith, J. (2023). Machine Learning Fundamentals. IEEE Software, 30(6): 17-23.",
-    "parseButton": "Referenz parsen",
-    "exportButton": "XML-Trainingsdaten exportieren",
-    "historyButton": "Trainings-Verlauf",
-    "parsedReference": "Geparste Referenz (CSL-Format)",
-    "editorTitle": "Token-Label Editor (Optional)",
-    "historyTitle": "Trainingsdaten-Verlauf",
-    "sequences": "Sequenzen",
-    "originalText": "Original-Text",
-    "noHistory": "Noch keine Trainingsdaten gespeichert",
-    "clearHistory": "Gesamten Verlauf löschen"
-  },
   "tooltip-abstract": "Kurze Zusammenfassung des Inhalts der Publikation (z.B. 'This study examines...')",
   "tooltip-accepted": "Datum, an dem das Manuskript zur Veröffentlichung angenommen wurde (z.B. '2024-03-15')",
   "tooltip-advisor": "Akademischer Betreuer oder Supervisor (z.B. 'Prof. Dr. Schmidt')",
@@ -964,6 +951,23 @@
   "tooltip-yearEnd": "Endjahr für mehrstufige Publikationen oder Zeitspannen (z.B. '2024' bei '2020-2024')",
   "tooltip-yearSuffix": "Zusätzliches Suffix für das Publikationsjahr (z.B. 'a', 'b' bei mehreren Publikationen im Jahr)",
   "total-weight": "Gesamtgewichtung",
+  "training-data": {
+    "clearHistory": "Gesamten Verlauf löschen",
+    "description": "Parsen Sie Referenzen mit AnyStyle und korrigieren Sie Token-Labels, um Trainingsdaten für verbesserte Parsing-Genauigkeit zu erstellen.",
+    "editorTitle": "Token-Label Editor (Optional)",
+    "exportButton": "XML-Trainingsdaten exportieren",
+    "historyButton": "Trainings-Verlauf",
+    "historyTitle": "Trainingsdaten-Verlauf",
+    "inputLabel": "Referenz-Text",
+    "inputPlaceholder": "Fügen Sie hier eine Referenz ein, z.B.: Smith, J. (2023). Machine Learning Fundamentals. IEEE Software, 30(6): 17-23.",
+    "modelTraining": "Modell-Training",
+    "noHistory": "Noch keine Trainingsdaten gespeichert",
+    "originalText": "Original-Text",
+    "parseButton": "Referenz parsen",
+    "parsedReference": "Geparste Referenz (CSL-Format)",
+    "sequences": "Sequenzen",
+    "title": "AnyStyle Modell-Training"
+  },
   "translator": "Übersetzer",
   "type": "Typ",
   "unregistered": "Nicht registriert",
@@ -990,6 +994,7 @@
   "verify": "Prüfen",
   "verify-against-website": "Gegen Website prüfen",
   "verify-reference-against-website-description": "Geben Sie eine Website-URL ein, um diese Referenz gegen den Website-Inhalt zu prüfen",
+  "verify-references-by-searching-and-matching-them-to-entries-in-scholarly-databases": "Verifizieren Sie Referenzen, indem Sie sie in wissenschaftlichen Datenbanken suchen und abgleichen",
   "verifying-reference-current": "Überprüfe: {reference}",
   "verifying-references-progress": "Überprüfe Referenzen ({current}/{total})",
   "version": "Version",
