--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -189,6 +189,7 @@
   "early-termination-threshold-high": "Very strict (99%)",
   "early-termination-threshold-low": "Less strict (50%)",
   "early-termination-title": "Early Termination",
+  "edit": "Edit",
   "edition": "Edition",
   "editor": "Editors",
   "editorial-director": "Editorial Director",
@@ -437,6 +438,7 @@
   "import-pdf-or-add-references": "Import a PDF file or paste references into the text field to start verification.",
   "in-press": "In Press",
   "in-press-indicator": "in press",
+  "input-references-as-text-or-upload-a-file": "Input references as text or upload a file.",
   "input-required": "Input required",
   "insert-references": "Insert text with references...",
   "institution": "Institution",
@@ -643,6 +645,7 @@
   "pages": "Pages",
   "pages-match": "Pages Match",
   "paragraph-number": "Paragraph Number",
+  "parse": "Parse",
   "part": "Part",
   "part-title": "Part Title",
   "partial-verification": "{verified}/{total} verified ({percentage}%)",
@@ -688,6 +691,7 @@
   "restart-verification": "Restart verification",
   "retrieval-date": "Retrieval Date",
   "retry": "Retry",
+  "review-and-relabel-parsed-references-by-clicking-on-tokens": "Review and relabel parsed references by clicking on tokens.",
   "reviewed-author": "Reviewed Author",
   "reviewed-genre": "Reviewed Genre",
   "reviewed-title": "Reviewed Title",
@@ -855,36 +859,19 @@
   "title-match": "Title Match",
   "title-short": "Title (Short)",
   "token-relabeling": {
-    "title": "Token Relabeling Editor",
-    "save": "Save Changes",
-    "noTokens": "No tokens available for relabeling",
-    "currentLabel": "Current Label",
-    "token": "Token",
     "changeLabelFor": "Change label for",
-    "deleteToken": "Delete Token",
-    "totalTokens": "Total Tokens",
     "changesCount": "Changes Made",
-    "reset": "Reset Changes"
+    "currentLabel": "Current Label",
+    "deleteToken": "Delete Token",
+    "noTokens": "No tokens available for relabeling",
+    "reset": "Reset Changes",
+    "save": "Save Changes",
+    "title": "Token Relabeling Editor",
+    "token": "Token",
+    "totalTokens": "Total Tokens"
   },
   "tokens-per-minute": "Tokens per minute",
   "tokens-per-minute-description": "This is the limit of AI tokens per minute",
-  "training-data": {
-    "title": "AnyStyle Model Training",
-    "modelTraining": "Model Training",
-    "description": "Parse references with AnyStyle and correct token labels to create training data for improved parsing accuracy.",
-    "inputLabel": "Reference Text",
-    "inputPlaceholder": "Paste a reference here, e.g.: Smith, J. (2023). Machine Learning Fundamentals. IEEE Software, 30(6): 17-23.",
-    "parseButton": "Parse Reference",
-    "exportButton": "Export XML Training Data",
-    "historyButton": "Training History",
-    "parsedReference": "Parsed Reference (CSL Format)",
-    "editorTitle": "Token Label Editor (Optional)",
-    "historyTitle": "Training Data History",
-    "sequences": "sequences",
-    "originalText": "Original Text",
-    "noHistory": "No training data saved yet",
-    "clearHistory": "Clear All History"
-  },
   "tooltip-abstract": "Brief summary of the publication's content (e.g. 'This study examines...')",
   "tooltip-accepted": "Date when the manuscript was accepted for publication (e.g. '2024-03-15')",
   "tooltip-advisor": "Academic advisor or supervisor (e.g. 'Prof. Dr. Schmidt')",
@@ -964,6 +951,23 @@
   "tooltip-yearEnd": "End year for date ranges (e.g. '2020' in '2019-2020')",
   "tooltip-yearSuffix": "Additional suffix for the publication year (e.g. 'a', 'b' for multiple publications in one year)",
   "total-weight": "Total Weight",
+  "training-data": {
+    "clearHistory": "Clear All History",
+    "description": "Parse references with AnyStyle and correct token labels to create training data for improved parsing accuracy.",
+    "editorTitle": "Token Label Editor (Optional)",
+    "exportButton": "Export XML Training Data",
+    "historyButton": "Training History",
+    "historyTitle": "Training Data History",
+    "inputLabel": "Reference Text",
+    "inputPlaceholder": "Paste a reference here, e.g.: Smith, J. (2023). Machine Learning Fundamentals. IEEE Software, 30(6): 17-23.",
+    "modelTraining": "Model Training",
+    "noHistory": "No training data saved yet",
+    "originalText": "Original Text",
+    "parseButton": "Parse Reference",
+    "parsedReference": "Parsed Reference (CSL Format)",
+    "sequences": "sequences",
+    "title": "AnyStyle Model Training"
+  },
   "translator": "Translator",
   "type": "Type",
   "unregistered": "Unregistered",
@@ -990,6 +994,7 @@
   "verify": "Verify",
   "verify-against-website": "Verify against website",
   "verify-reference-against-website-description": "Enter a website URL to verify this reference against the website content",
+  "verify-references-by-searching-and-matching-them-to-entries-in-scholarly-databases": "Verify references by searching and matching them to entries in scholarly databases.",
   "verifying-reference-current": "Verifying: {reference}",
   "verifying-references-progress": "Verifying references ({current}/{total})",
   "version": "Version",
