--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -217,7 +217,7 @@
   "executive-producer": "Executive Producer",
   "expert-settings": "Expert Settings",
   "expert-settings-description": "Configure advanced verification settings and field weights for metadata matching",
-  "extract-references": "Extract references",
+  "extract-references": "Extract References",
   "extracted": "Extracted",
   "extracting-dois": "Extracting DOIs",
   "extracting-dois-description": "Extracting DOIs from the Text. Please wait...",
@@ -647,6 +647,7 @@
   "pages-match": "Pages Match",
   "paragraph-number": "Paragraph Number",
   "parse": "Parse",
+  "parse-references": "Parse References",
   "part": "Part",
   "part-title": "Part Title",
   "partial-verification": "{verified}/{total} verified ({percentage}%)",
