--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -138,6 +138,7 @@
   "content-formatting-settings-description": "Settings for formatting and standardizing bibliographic content",
   "contributor": "Contributor",
   "contributors": "Contributors",
+  "converts-parsed-tokens-to-csl-searches-and-matches-references": "Converts parsed tokens to CSL format, searches databases, and matches references",
   "copy": "Copy",
   "copy-clicked": "Copied!",
   "copy-hover": "Click to copy",
@@ -160,7 +161,7 @@
   "date-range": "Date Range",
   "day": "Day",
   "degree": "Degree",
-  "delete": "",
+  "delete": "Delete",
   "department": "Department",
   "description": "Description",
   "description-match": "Description Match",
@@ -697,6 +698,7 @@
   "reviewed-author": "Reviewed Author",
   "reviewed-genre": "Reviewed Genre",
   "reviewed-title": "Reviewed Title",
+  "save": "Save",
   "save-settings": "Save Settings",
   "scale": "Scale",
   "scenario": "Scenario",
@@ -996,7 +998,9 @@
   "verify": "Verify",
   "verify-against-website": "Verify against website",
   "verify-reference-against-website-description": "Enter a website URL to verify this reference against the website content",
+  "verify-references": "Verify References",
   "verify-references-by-searching-and-matching-them-to-entries-in-scholarly-databases": "Verify references by searching and matching them to entries in scholarly databases.",
+  "verifying": "Verifying",
   "verifying-reference-current": "Verifying: {reference}",
   "verifying-references-progress": "Verifying references ({current}/{total})",
   "version": "Version",
@@ -1016,7 +1020,8 @@
   "year-match": "Year Match",
   "year-suffix": "Year Suffix",
   "yes": "Yes",
-  "verifying": "Verifying",
-  "verify-references": "Verify References",
-  "converts-parsed-tokens-to-csl-searches-and-matches-references": "Converts parsed tokens to CSL format, searches databases, and matches references"
+  "ai-settings-saved": "AI settings saved",
+  "ai-settings-save-error": "Error saving AI settings",
+  "ai-settings-deleted": "AI settings deleted",
+  "ai-settings-delete-error": "Error deleting AI settings"
 }
